docs: Minor docs changes
